2023-01-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/tbl/main.cpp (process_format): Recast diagnostic
	message to refer to character by its Unicode name and generalize
	to accurately cover additional circumstance of excess '|'
	symbols at end of row definition.

2023-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/ms.ms: Remove redundant initializations.

2023-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/ms.ms: Define appropriate hyphen-minus mapping on 'cp1047'
	output device.

2023-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (TE): Enable no-space mode after outputting the
	display distance vertically, replacing any inter-paragraph
	distance that might follow.

2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grohtml]: Fix misleading diagnostic message.

	* src/preproc/html/pre-html.cpp (main): The suggestion should be
	to re-run the formatter (groff, troff), not "pre-grohtml", with
	a different output driver since the document may be malformed.

2023-01-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/tbl/main.cpp (process_format): Fix code hygiene
	nit: nullify `list` pointer after freeing its target.

2023-01-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Really fix Savannah #63449.

	* src/preproc/tbl/main.cpp (process_format): "Or" on the
	`HAS_TOP_VLINE` flag if the format specification begins with a
	"|"; the beginning is a separate state in the FSM used to parse
	the description.  I missed it in commit 0e93ab4102, 1 December.

	Fixes <https://savannah.gnu.org/bugs/?63449>.

2023-01-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/tbl/tests/\
	do-not-overdraw-page-top-in-nroff-mode.sh: Correct erroneous
	check of test output, and add two more test cases.

2023-01-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac: Move the saving of the hyphenation mode from